@@ -25,7 +25,6 @@ import org.labkey.api.module.ModuleContext;
 import org.labkey.api.view.WebPartFactory;
 import org.labkey.bigiron.mssql.GroupConcatInstallationManager;
 import org.labkey.bigiron.mssql.MicrosoftSqlServerDialectFactory;
-import org.labkey.bigiron.mssql.MicrosoftSqlServerVersion;
 import org.labkey.bigiron.mysql.MySqlDialectFactory;
 import org.labkey.bigiron.oracle.OracleDialectFactory;
 import org.labkey.bigiron.sas.SasDialectFactory;
@@ -83,12 +82,6 @@ public class BigIronModule extends CodeOnlyModule
     @NotNull
     public Set<Class> getIntegrationTests()
     {
-        return Set.of(GroupConcatInstallationManager.TestCase.class);
-    }
-
-    @Override
-    public @NotNull Set<Class> getUnitTests()
-    {
-        return Set.of(MicrosoftSqlServerVersion.TestCase.class);
+        return Collections.singleton(GroupConcatInstallationManager.TestCase.class);
     }
 }
